gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/test18480b.d
version https://git-lfs.github.com/spec/v1
oid sha256:a605c9086954b0838f1d4c27050016512ea325fbb7c9837b81685c288ac6139d
size 28
